k8s/Backend Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-demo-backend-svc
  namespace: eks-demo
spec:
  selector:
    app: demo-backend
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
