k8s/Frontend Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-demo-frontend-svc
  namespace: eks-demo
spec:
  selector:
    app: demo-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
