k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-demo-frontend-svc
  namespace: demo-eks
spec:
  selector:
    app: demo-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
